documented book APIs
